--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,14 +11,28 @@ composeBom = "2024.11.00"
 jetbrainsKotlinJvm = "2.0.21"
 androidTools = "31.7.2"
 
+# KotlinX Libraries
+serializationJson = "1.7.3"
+coroutinesAndroid = "1.9.0"
+kotlinxImmutableCollections = "0.3.7"
+
+appcompat = "1.7.0"
+material = "1.12.0"
+
+# Retrofit
+retrofit = "2.11.0"
+retrofitSerializationConverter = "1.0.0"
+
+ksp = "2.0.21-1.0.25"
+
+hilt = "2.52"
+
 projectApplicationId = "com.kady.muhammad.currencyexchange"
 projectVersionName = "1.0"
 projectMinSdkVersion = "26"
 projectTargetSdkVersion = "35"
 projectCompileSdkVersion = "35"
 projectVersionCode = "1"
-appcompat = "1.7.0"
-material = "1.12.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -42,15 +56,34 @@ kotlin-gradlePlugin = { group = "org.jetbrains.kotlin", name = "kotlin-gradle-pl
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 
+
+# Dagger Hilt Libraries
+hiltAndroid = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
+hiltAndroidCompiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt" }
+
+# KotlinX Libraries
+coroutinesAndroid = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-android", version.ref = "coroutinesAndroid" }
+serializationJson = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "serializationJson" }
+kotlinxImmutableCollections = { group = "org.jetbrains.kotlinx", name = "kotlinx-collections-immutable", version.ref = "kotlinxImmutableCollections" }
+
+# Retrofit Libraries
+retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
+retrofitSerializationConverter = { group = "com.jakewharton.retrofit", name = "retrofit2-kotlinx-serialization-converter", version.ref = "retrofitSerializationConverter" }
+
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
+android-library = { id = "com.android.library", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 jetbrains-kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "jetbrainsKotlinJvm" }
+
+hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
+ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
+kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
+
 currencyexchange-android-application = { id = "currencyexchange.android.application", version = "unspecified" }
 currencyexchange-android-application-compose = { id = "currencyexchange.android.application.compose", version = "unspecified" }
 currencyexchange-android-library = { id = "currencyexchange.android.library", version = "unspecified" }
 currencyexchange-android-library-compose = { id = "currencyexchange.android.library.compose", version = "unspecified" }
 currencyexchange-jvm-library = { id = "currencyexchange.jvm.library", version = "unspecified" }
-android-library = { id = "com.android.library", version.ref = "agp" }
 
